Node Mongo Movies/adding delete function

--- a/2014-02-12-node-mongo.movies/client/app/css/app.less
+++ b/2014-02-12-node-mongo.movies/client/app/css/app.less
@@ -1,4 +1,5 @@
 @bg-color: lightblue;
+@poster-height: 200px;
 
 body{
   background-color: @bg-color;
@@ -6,6 +7,11 @@ body{
 
 .poster{
   margin: 10px;
-  height: 200px;
-  width: 150px;
+  height: @poster-height;
+  width: @poster-height * .675;
+}
+
+.button{
+  position: relative;
+  top: 75px;
 }
