--- a/2014-02-12-node-mongo.movies/client/app/index.jade
+++ b/2014-02-12-node-mongo.movies/client/app/index.jade
@@ -52,7 +52,7 @@ html(class='no-js', lang='en')
                   input(type='text', name='actors')
     .row
       .small-12.columns
-        table
+        table#movies
           thead
             tr
               th Poster
