Node ToDo List TDD

--- a/2014-02-18-Node-Tdd.Todo-List/client/app/index.jade
+++ b/2014-02-18-Node-Tdd.Todo-List/client/app/index.jade
@@ -4,7 +4,7 @@ html(class='no-js', lang='en')
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    title Foundation 5
+    title Todo List
     link(rel='stylesheet', href='/css/normalize.css')
     link(rel='stylesheet', href='/css/foundation.css')
     link(rel='stylesheet', href='/css/app.css')
@@ -12,7 +12,36 @@ html(class='no-js', lang='en')
   body
     .row
       .small-12.columns
-        h1 Foundation 5 Template
+        h1 Todo List
+    .row
+      .small-10.columns
+      .small-2.columns
+        button#togglePriorities
+    .row
+      .small-2.columns
+        button#toggleNewPriority
+        button#togglePriorityList
+      .small-4.columns
+        form#priority
+          fieldset
+            legend Priority
+            .row-12.columns
+              label Name
+              input(type='text', name='name')
+            .row-12.columns
+              label Value
+              input(type='text', name='value')
+            .row-12.columns
+              button Create Priority
+      .small-6.columns
+        table#priorities
+          tr
+            th Name
+            th Value
+            th
+            th Delete
+          tbody
+
 
     script(src='/js/vendor/jquery.js')
     script(src='/js/vendor/foundation.js')
