Node Todo Part 2

--- a/2014-02-18-Node-Tdd.Todo-List/client/app/index.jade
+++ b/2014-02-18-Node-Tdd.Todo-List/client/app/index.jade
@@ -16,11 +16,11 @@ html(class='no-js', lang='en')
     .row
       .small-10.columns
       .small-2.columns
-        button#togglePriorities
+        button#togglePriorities Edit Priorities
     .row
       .small-2.columns
-        button#toggleNewPriority
-        button#togglePriorityList
+        button#toggleNewPriority Create New Priorities
+        button#togglePriorityList Edit Existing Priorities
       .small-4.columns
         form#priority
           fieldset
